--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,13 @@
   text-align: center;
   color: rgb(201, 52, 179);
   font-weight: 700;
+  font-size: 30px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.App-logo {
-  max-width: 200px;
-  display: block;
-  margin: 0 auto;
+
+.App-main {
+  text-align: center;
 }
 .App-footer {
   text-align: center;
