--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App-header {
-  margin: 30px 0;
-  padding: 30px;
+  background-image: url("books.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 20px 0;
+  padding: 50px;
   text-align: center;
   color: rgb(201, 52, 179);
   font-weight: 700;
-  font-size: 30px;
+  font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
