--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,6 +1,33 @@
-.Dictionary form {
-  display: flex;
-  justify-content: center;
-  margin: auto;
+.Dictionary .Results {
+  background: rgba(237, 175, 218, 0.506);
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 0 10px 10px rgb(0 0 0 /10%);
+  margin: 20px 0;
+}
+.Dictionary .Phonetic {
+  background: rgba(175, 234, 237, 0.506);
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 0 10px 10px rgb(0 0 0 /10%);
+  margin: 20px 0;
+}
+.Dictionary .Meaning {
+  background: rgba(175, 237, 182, 0.506);
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 0 10px 10px rgb(0 0 0 /10%);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  border: 1px solid #d29ae3;
+  border-radius: 10px;
   padding: 10px;
+}
+.Dictionary .hint {
+  font-size: 13px;
+  margin-top: 5px;
+  color: #c327cf;
 }
