--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .App {
   margin: 0 auto;
   max-width: 960px;
+  padding: 0 20px;
 }
 .App-header {
   background-image: url("books.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   margin: 20px 0;
-  padding: 50px;
+  padding: 50px 20px;
   text-align: center;
   color: rgb(201, 52, 179);
   font-weight: 700;
@@ -25,4 +26,14 @@
 }
 .App a {
   color: blueviolet;
+}
+@media (max-width: 573px) {
+  .App-header {
+    font-size: 30px;
+    padding: 30px 10px;
+    background-image: none;
+  }
+  .App {
+    padding: 0 10px;
+  }
 }
