--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -4,3 +4,17 @@
   opacity: 0.7;
   margin-bottom: 20px;
 }
+.audio-player {
+  margin: 20px auto;
+  width: 100px;
+  max-width: 600px;
+}
+.audio-player-element {
+  width: 100% !important;
+  height: 40px !important;
+}
+@media (max-width: 573px) {
+  .audio-player {
+    width: 100%;
+  }
+}
